--- a/templates/news.html
+++ b/templates/news.html
@@ -5,7 +5,7 @@
 <header class="p-8 lg:p-16">
     <h1 class="text-3xl font-medium pb-2">Tlon News</h1>
     <p class="pb-2">Learn more about Tlon’s work, the Urbit community, and other stories</p>
-    <!-- <a class="text-gray-400" href="#">Subscribe to Tlon’s Newsletter</a> -->
+    <a class="text-blue-400" href="https://urbit.us11.list-manage.com/subscribe?u=972a03db9e0c6c25bb58de8c8&id=66e4c17e5d">Subscribe to Tlon’s Newsletter</a>
 </header>
 
   <section class="p-8 lg:p-16">
