--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -5,8 +5,7 @@
         <h4 class="pb-4 lg:pb-8 text-gray-400">News</h4>
         <ul class="list-none">
             <li class="py-2"><a href="/news">All Posts</a></li>
-            <!-- <li class="py-2">Latest News</li> -->
-            <!-- <li class="py-2">Community News</li> -->
+            <li class="py-2"><a href="https://urbit.us11.list-manage.com/subscribe?u=972a03db9e0c6c25bb58de8c8&id=66e4c17e5d">Newsletter</a></li>
         </ul>
     </section>
     
