--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <header class="pt-52 px-8 pb-8 lg:pt-56 lg:py-16 lg:pb-16 grid justify-items-stretch">
-  <h1 class="text-3xl font-medium lg:text-center pb-16">Leave the internet behind.</h1>
+  <h1 class="text-3xl font-medium text-center pb-16">Leave the internet behind.</h1>
   <a class="bg-blue-100 text-blue-800 py-4 px-6 rounded-xl justify-self-center" href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io">Join the waitlist</a>
 </header>
 
