--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -16,6 +16,7 @@
             <li class="py-2"><a href="support@tlon.io">support@tlon.io</a></li>
             <li class="py-2"><a href="https://discord.gg/Mae2bk7">Discord</a></li>
             <li class="py-2"><a href="/privacy">Privacy Policy</a></li>
+            <li class="py-2"><a href="/terms">Terms of Service</a></li>
         </ul>
     </section>
 </footer>
