--- a/templates/news.html
+++ b/templates/news.html
@@ -12,14 +12,15 @@
 
 	<h2 class="mb-8 lg:mb-12 text-gray-400">All Posts</h2>
 	
-	<section class="new-posts">
+	<section class="new-posts flex flex-col content-start">
 		{% for page in section.pages %}
-		<a class="inline-block" href="{{ page.permalink | safe }}">
-			<article class="blog-post gap-8 py-8 lg:w-1/3">
+			<article class="inline-block blog-post gap-8 py-8 lg:w-1/3">
 				<div class="pb-4">
+					<a href="{{ page.permalink | safe }}">
 					<h3 class="py-1 font-semibold">
 						{{ page.title }}
 					</h3>
+					</a>
 					<div class="py-1">
                         {% if page.extra.author %}
                         <p class="inline">{{page.extra.author}}</p> 
@@ -32,7 +33,6 @@
 				<img class="w-full lg:h-48 lg:h-72 lg:w-100 rounded-xl lg:flex mb-4 object-cover border-black border-opacity-20 border border-solid" src="{% if page.extra.postimage %}{{ page.extra.postimage }}{% endif %}">
 				<p class="text-gray-600">{{ page.description }}</p>
 			</article>
-        </a>
         {% endfor %}
     </section>
 
