--- a/templates/news.html
+++ b/templates/news.html
@@ -12,7 +12,7 @@
 
 	<h2 class="mb-8 lg:mb-12 text-gray-400">All Posts</h2>
 	
-	<section class="new-posts flex flex-col content-start">
+	<section class="new-posts flex flex-row content-start">
 		{% for page in section.pages %}
 			<article class="inline-block blog-post gap-8 py-8 lg:w-1/3">
 				<div class="pb-4">
@@ -30,7 +30,7 @@
 						<p class="text-gray-400">{{ page.date | date(format="%B %Y") }}</p> 	
 					</div>
 				</div>
-				<img class="w-full lg:h-48 lg:h-72 lg:w-100 rounded-xl lg:flex mb-4 object-cover border-black border-opacity-20 border border-solid" src="{% if page.extra.postimage %}{{ page.extra.postimage }}{% endif %}">
+				<img class="news-ratio rounded-xl lg:flex mb-4 border-black border-opacity-20 border border-solid" src="{% if page.extra.postimage %}{{ page.extra.postimage }}{% endif %}">
 				<p class="text-gray-600 mb-8">{{ page.description }}</p>
 				<a class="bg-blue-100 text-blue-800 py-4 px-6 rounded-xl" href="{{ page.permalink | safe }}">Continue Reading</a>
 			</article>
