edit post column size, spacing

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -36,7 +36,5 @@ html { font-family: 'Inter var', sans-serif; }
 }
 
 .news-ratio {
-  aspect-ratio: 4 / 3;
-  width: 400px;
-  height: 300px;
+  width: 100%;
 }
