--- a/templates/news.html
+++ b/templates/news.html
@@ -8,34 +8,27 @@
     <a class="text-blue-800" href="https://urbit.us11.list-manage.com/subscribe?u=972a03db9e0c6c25bb58de8c8&id=66e4c17e5d">Subscribe to Tlon’s Newsletter</a>
 </header>
 
-  <section class="p-8 lg:p-16">
+<section class="lg:w-2/3 p-8 lg:p-16">
 
 	<h2 class="mb-8 lg:mb-12 text-gray-400">All Posts</h2>
-	
-	<section class="new-posts flex flex-row content-start">
-		{% for page in section.pages %}
-			<article class="inline-block blog-post gap-8 py-8 lg:w-1/3">
-				<div class="pb-4">
-					<a href="{{ page.permalink | safe }}">
-					<h3 class="py-1 font-semibold">
-						{{ page.title }}
-					</h3>
-					</a>
-					<div class="py-1">
-                        {% if page.extra.author %}
-                        <p class="inline">{{page.extra.author}}</p> 
-                        {% endif %}
-					</div>
-					<div class="py-1">
-						<p class="text-gray-400">{{ page.date | date(format="%B %Y") }}</p> 	
-					</div>
-				</div>
-				<img class="news-ratio rounded-xl lg:flex mb-4 border-black border-opacity-20 border border-solid" src="{% if page.extra.postimage %}{{ page.extra.postimage }}{% endif %}">
-				<p class="text-gray-600 mb-8">{{ page.description }}</p>
-				<a class="bg-blue-100 text-blue-800 py-4 px-6 rounded-xl" href="{{ page.permalink | safe }}">Continue Reading</a>
-			</article>
-        {% endfor %}
-    </section>
+	{% for page in section.pages %}
+	<article class="inline-block blog-post gap-8 py-8">
+		<div class="pb-4">
+			<a href="{{ page.permalink | safe }}"><h3 class="py-1 font-semibold">{{ page.title }}</h3></a>
+			<div class="py-1">
+				{% if page.extra.author %}
+				<p class="inline">{{page.extra.author}}</p> 
+				{% endif %}
+			</div>
+			<div class="py-1">
+				<p class="text-gray-400">{{ page.date | date(format="%B %Y") }}</p> 	
+			</div>
+		</div>
+		<img class="news-ratio rounded-xl lg:flex mb-4 border-black border-opacity-20 border border-solid" src="{% if page.extra.postimage %}{{ page.extra.postimage }}{% endif %}">
+		<p class="text-gray-600 mb-8">{{ page.description }}</p>
+		<a class="bg-blue-100 text-blue-800 py-4 px-6 rounded-xl" href="{{ page.permalink | safe }}">Continue Reading</a>
+	</article>
+	{% endfor %}
+</section>
 
-  </section>
 {% endblock content %}
