--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -12,7 +12,7 @@
     <section class="pb-8 lg:col-span-2">
         <h4 class="pb-4 lg:pb-8 text-gray-400">Support</h4>
         <ul class="list-none">
-            <li class="py-2 font-mono">~bitpyx-dildus/tlon-support</li>
+            <li class="py-2 font-mono"><a href="web+urbitgraph://group/~bitpyx-dildus/tlon-support">~bitpyx-dildus/tlon-support</a></li>
             <li class="py-2"><a href="support@tlon.io">support@tlon.io</a></li>
             <li class="py-2"><a href="https://discord.gg/Mae2bk7">Discord</a></li>
             <li class="py-2"><a href="/privacy">Privacy Policy</a></li>
