--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,6 +1,13 @@
-<footer class="p-8 lg:pt-48 lg:px-16 lg:pb-16 lg:grid lg:grid-cols-6 gap-4">
-    <p class="pb-16 lg:col-span-3 text-gray-400">Tlon Corporation</p>
-    
+<footer class="p-8 lg:pt-48 lg:px-16 lg:pb-16 lg:grid lg:grid-cols-8 gap-4">
+    <p class="pb-16 lg:col-span-4 text-gray-400">Tlon Corporation</p>
+
+    <section class="pb-8 lg:col-span-1">
+      <h4 class="pb-4 lg:pb-8 text-gray-400">Company</h4>
+      <ul class="list-none">
+        <li class="py-2"><a href="/careers">Jobs</a></li>
+      </ul>
+    </section>
+
     <section class="pb-8 lg:col-span-1">
         <h4 class="pb-4 lg:pb-8 text-gray-400">News</h4>
         <ul class="list-none">
@@ -8,7 +15,7 @@
             <li class="py-2"><a href="https://urbit.us11.list-manage.com/subscribe?u=972a03db9e0c6c25bb58de8c8&id=66e4c17e5d">Newsletter</a></li>
         </ul>
     </section>
-    
+
     <section class="pb-8 lg:col-span-2">
         <h4 class="pb-4 lg:pb-8 text-gray-400">Support</h4>
         <ul class="list-none">
