--- a/templates/careers.html
+++ b/templates/careers.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-{% block title %}<title>Tlon Corporation - Careers</title>{% endblock title %}
+{% block title %}
+<title>Tlon Corporation - Careers</title>
+<meta name="og:title" content="Tlon Corporation - Careers">
+{% endblock title %}
 {% block content %}
 {% include "partials/nav.html" %}
 <header class="p-8 lg:p-16">
