--- a/templates/news.html
+++ b/templates/news.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-{% block title %}<title>Tlon News</title>{% endblock title %}
+{% block title %}
+<title>Tlon News</title>
+<meta property="og:title" content="Tlon News">
+{% endblock title %}
 {% block content %}
 {% include "partials/nav.html" %}
 <header class="p-8 lg:p-16">
@@ -11,7 +14,7 @@
   <section class="p-8 lg:p-16">
 
 	<h2 class="mb-8 lg:mb-12 text-gray-400">All Posts</h2>
-	
+
 	<section class="new-posts">
 		{% for page in section.pages %}
 		<a class="inline-block" href="{{ page.permalink | safe }}">
@@ -22,11 +25,11 @@
 					</h3>
 					<div class="py-1">
                         {% if page.extra.author %}
-                        <p class="inline">{{page.extra.author}}</p> 
+                        <p class="inline">{{page.extra.author}}</p>
                         {% endif %}
 					</div>
 					<div class="py-1">
-						<p class="text-gray-400">{{ page.date | date(format="%B %Y") }}</p> 	
+						<p class="text-gray-400">{{ page.date | date(format="%B %Y") }}</p>
 					</div>
 				</div>
 				<img class="w-full lg:h-48 lg:h-72 lg:w-100 rounded-xl lg:flex mb-4 object-cover custom-inset-border" src="{% if page.extra.postimage %}{{ page.extra.postimage }}{% endif %}">
