templates: add twitter:name to all templates

--- a/templates/careers.html
+++ b/templates/careers.html
@@ -2,6 +2,7 @@
 {% block title %}
 <title>Tlon Corporation - Careers</title>
 <meta name="og:title" content="Tlon Corporation - Careers">
+<meta name="twitter:title" content="Tlon Corporation - Careers">
 {% endblock title %}
 {% block content %}
 {% include "partials/nav.html" %}
