--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}
 <meta property="og:title" content="Tlon Corporation">
+<meta name="twitter:title" content="Tlon Corporation">
 <title>Tlon Corporation</title>
 {% endblock title %}
 
