--- a/templates/news.html
+++ b/templates/news.html
@@ -2,6 +2,7 @@
 {% block title %}
 <title>Tlon News</title>
 <meta property="og:title" content="Tlon News">
+<meta name="twitter:title" content="Tlon News">
 {% endblock title %}
 {% block content %}
 {% include "partials/nav.html" %}
