--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}
   <meta name="og:title" content="{{ page.title }} - {{ config.title }}">
+  <meta name="twitter:title" content="{{ page.title }} - {{ config.title }}">
   <title>{{ page.title }} - {{ config.title }}</title>
 {% endblock title %}
 {% block content %}
