--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -4,7 +4,7 @@
     <section class="pb-8 lg:col-span-1">
       <h4 class="pb-4 lg:pb-8 text-gray-400">Company</h4>
       <ul class="list-none">
-        <li class="py-2"><a href="/careers">Jobs</a></li>
+        <li class="py-2"><a href="/careers">Careers</a></li>
       </ul>
     </section>
 
