--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -20,7 +20,7 @@
         <h4 class="pb-4 lg:pb-8 text-gray-400">Support</h4>
         <ul class="list-none">
             <li class="py-2 font-mono">~bitpyx-dildus/tlon-support</li>
-            <li class="py-2"><a href="support@tlon.io">support@tlon.io</a></li>
+            <li class="py-2"><a href="mailto:support@tlon.io">support@tlon.io</a></li>
             <li class="py-2"><a href="https://discord.gg/Mae2bk7">Discord</a></li>
             <li class="py-2"><a href="/privacy">Privacy Policy</a></li>
             <li class="py-2"><a href="/terms">Terms of Service</a></li>
