--- a/templates/news-post.html
+++ b/templates/news-post.html
@@ -21,7 +21,7 @@
     </section>
 
     <section class="box-border p-8 lg:p-16 grid justify-items-stretch">
-        <a class="bg-blue-100 text-blue-800 py-4 px-6 rounded-xl justify-self-center" href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io">Join the waitlist</a>
+        <a class="bg-blue-100 text-blue-800 py-4 px-6 rounded-xl justify-self-center" href="https://urbit.typeform.com/to/zQ9QOV3Z#source=tlon_io">Join the Tlon Hosting waitlist</a>
     </section>
 </article>
 {% endblock content %}
