--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -20,7 +20,7 @@ html { font-family: 'Inter var', sans-serif; }
   -webkit-font-smoothing: antialiased;
 }
 
-.editorial > p {
+.editorial > p, ol, h2 {
     @media (min-width: 1024px) { width: 58.333333%; }
     margin: auto;
     font-family: "Untitled-Serif", serif;
@@ -32,7 +32,16 @@ html { font-family: 'Inter var', sans-serif; }
   text-decoration: underline;
 }
 
+.editorial h2 {
+  margin-top: 4em;
+  font-size: 1.25em;
+}
+
 // replaces`border-black border-opacity-20 border border-solid` for image content
 .custom-inset-border {
   box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.1);
+}
+
+ol {
+  list-style-type: decimal;
 }
