--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -32,6 +32,10 @@ html { font-family: 'Inter var', sans-serif; }
   text-decoration: underline;
 }
 
+.editorial > ul > li > a {
+  text-decoration: underline;
+}
+
 .editorial h2 {
   margin-top: 4em;
   font-size: 1.25em;
