--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -6,11 +6,11 @@
 {% endblock title %}
 {% block content %}
 {% include "partials/nav.html" %}
-<article class="p-8 lg:p-16 lg:w-10/12 container mx-auto">
-    <header class="box-border lg:w-7/12 pb-16 m-auto">
-        <h1 class="text-3xl font-medium pb-2">{{ page.title }}</h1>
+<article class="p-8 lg:p-16 lg:w-10/12 container mx-auto serif">
+    <header class="box-border lg:text-xl lg:max-w-prose pb-16 m-auto">
+        <h1 class="text-3xl font-sans font-medium pb-2">{{ page.title }}</h1>
     </header>
-    <section class="editorial pt-16 leading-relaxed text-lg lg:text-xl font-serif">
+    <section class="prose prose-lg lg:prose-xl editorial pt-16 lg:mx-auto leading-relaxed">
         {{ page.content | safe }}
     </section>
 </article>
