fix paragraph width styling

--- a/templates/news-post.html
+++ b/templates/news-post.html
@@ -16,7 +16,7 @@
         <p class="text-gray-400" href="#">{{ page.date | date(format="%B %Y") }}</p>
     </header>
 
-    <section class="editorial pt-16 leading-relaxed text-lg lg:text-xl font-serif">
+    <section class="editorial pt-16 leading-relaxed text-lg lg:text-xl font-serif lg:w-6/12">
         {{ page.content | safe }}
     </section>
 
