--- a/templates/careers-post.html
+++ b/templates/careers-post.html
@@ -6,14 +6,24 @@
 {% endblock title %}
 {% block content %}
 {% include "partials/nav.html" %}
-<article class="p-8 lg:p-16 lg:w-10/12 container mx-auto">
+<article class="p-8 lg:p-16 lg:w-7/12 container mx-auto">
 
-  <header class="box-border lg:w-7/12 pb-16 m-auto">
+  <header class="box-border lg:w-100 pb-16 m-auto">
     <h1 class="text-3xl font-medium pb-2">{{ page.title }}</h1>
     {% if page.extra.location %}
     <p class="text-gray-400">{{ page.extra.location }}</p>
     {% else %}
     <p class="text-gray-400">Remote</p>
+    {% endif %}
+
+    {% if page.extra.department %}
+    <p class="text-gray-400">Department: {{ page.extra.department }}</p>
+    {% else %}
+    {% endif %}
+
+    {% if page.extra.location %}
+    <p class="text-gray-400">Reports to the {{ page.extra.reports }}</p>
+    {% else %}
     {% endif %}
   </header>
 
