add link to developer guide in footer

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -24,5 +24,10 @@
             <li class="py-2"><a href="/privacy">Privacy Policy</a></li>
             <li class="py-2"><a href="/terms">Terms of Service</a></li>
         </ul>
+        <br/><br/>
+        <h4 class="pb-4 lg:pb-8 text-gray-400">Developers</h4>
+        <ul class="list-none">
+            <li class="py-2"><a href="https://dev.tlon.io" target="_blank">Developer Guide</a></li>
+        </ul>
     </section>
 </footer>
