adds google analytics

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,15 @@
       <p><img src="https://analytics.urbit.org/matomo.php?idsite=3&amp;rec=1" style="border:0;" alt="" /></p>
     </noscript>
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-J7P036B93P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-J7P036B93P');
+    </script>
+
   </head>
   <body>
     {% block content %}
